# RAG-with-ChromaDB-GroqLLM

./: README.md  main.py  pyproject.toml  requirements.txt
notebook/: trials.ipynb
src/: embedding.py  llm.py  rag_retriever.py  rag_search.py  vectorstore.py
